# scratch

./: .gitmodules  LICENSE  README.md
arrayCpp/: CMakeLists.txt
arrayCpp/src/: arrayCpp.cpp
cMakefileEx/include/: .hello.h.swp  hello.h
cMakefileEx/src/: .doExample.c.swp  .hello.c.swp  doBuild.sh  doExample.c  hello.c  myProg
myCatkin/: README.md  mowLaunchOnBoot.sh  workspace.code-workspace
myCatkin/config/: VESC_BLDC Config_Traxxas Velineon 3500_SBTested.xml  package.xml  params.yaml
myCatkin/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
myCatkin/devel/lib/pkgconfig/: poseTxT265.pc  talkListenWs.pc
myCatkin/devel/lib/poseTxT265/: poseTx
myCatkin/src/av_pointcloud/: CMakeLists.txt  package.xml
myCatkin/src/axle_arb/: CMakeLists.txt  package.xml
myCatkin/src/data_recorder/: CMakeLists.txt  README.md  package.xml
myCatkin/src/mowbot/: CMakeLists.txt  package.xml
myCatkin/src/poseTxT265/: CMakeLists.txt  package.xml
myCatkin/src/talkListenWs/: package.xml
myCatkin/src/teleop/: CMakeLists.txt  package.xml
myCatkin/src/turn_arb/: CMakeLists.txt  README.md  package.xml
myCatkin/whiteboard/: README.txt  basic_node_template.cpp  dumbtricks.txt
myCatkin/whiteboard/octave/: PathSmoothingSample.m  basicTest.m  dwaRef.m  f_genSquare.m  f_getPathlen.m  hello.txt  pointSquare.m  sim_doDwa2.m
myCatkin/whiteboard/talkListenWs/: CMakeLists.txt
realsensePose/: CMakeLists.txt  myPose.cpp  realsensePose.code-workspace
realsensePose2/: myPose.cpp
realsenseScratch/: CMakeLists.txt  myPose.cpp  myPoseAndFrame.cpp
(+191 files in other folders)
